@@ -60,9 +60,11 @@ future relase:
                                 |    |     |      |          |         |
                                 |    +-----+------+----------+---------+
                                 |    |
-0      FnWrap1(cont)   A2x      |    |      FnWrap1c(cont)
-             |          |       |    |            |  
-             +----+-----+       |    |  +---------+-----------+
+0      FnWrap1(cont)   A2x      |    |      FnWrap1c(cont)     Errno(cont)
+             |          |       |    |            |                 |
+             +----+-----+       |    |  +---------+-----------+     |
+                  |             |    |  |         |           |     |
+                  |             |    |  |         |           +-----+ 
                   |             |    |  |         |           | 
                String           |    +--+    MultiStreambuf  Glob
                   |             |    |
