@@ -35,7 +35,7 @@ class Glob
             DEFAULT
         };
             
-        Glob(std::string const &pattern = "*", Flags flags = PERIOD,
+        Glob(std::string const &pattern = "*", int flags = PERIOD,
              Dots dots = FIRST);
         Glob(Glob const &other);
         ~Glob();
