@@ -3,6 +3,7 @@
 #include <cstdlib>
 #include <algorithm>
 #include <bobcat/fnwrap1>
+#include <bobcat/errno>
 
 using namespace std;
 using namespace FBB;
