@@ -1,3 +1,10 @@
+bobcat (1.14.3)
+
+  * TO BE UPLOADED
+
+  * The Glob constructor no longer requires a static_cast when multiple flags
+    are specified for its second argument.
+
 bobcat (1.14.2)
 
   * Added (still) missing headers to glob.ih, log.ih and tablesupport.ih
